2004-03-10  David Ayers  <d.ayers@inode.at>

	* GSWeb.framework/GNUmakefile: Make WO_HEADER_FILES real
	public headers.
	* GSWExtensions.framework/GNUmakefile: Ditto.
	* GSWeb.framework/Makefile.postamble: Simplify rules for
	installing WO_HEADER_FILES.
	* GSWExtensions.framework/Makefile.postamble: Ditto.
	
2004-03-04  David Ayers  <d.ayers@inode.at>

	* config.mak.in: Added EOCONTROL_LIBRARY_NAME, 
	EOACCESS_LIBRARY_NAME and HAVE_NATIVE_FRAMEWORK_SUPPORT.
	* GSWeb.framework/Makefile.preamble.in: Added support for 
	buildings on OS X and improve support for others.
	* GSWExtensions.framework/Makefile.preamble: Ditto.
	* GSWExtensionsGSW.framework/Makefile.preamble: Ditto.
	* GSWeb.framework/GNUmakefile: Remove GNUSTEP_MAKEFILES.

	* GSWeb.framework/GSWMultiKeyDictionary.m
	([GSWMultiKeyDictionary initWithNodeSize:capacity:]): Replace
	usage of GSObjCZone with -zone for OS X compatibility.
	([GSWMultiKeyDictionary dealloc]): Ditto.

2004-03-03   Manuel Guesdon <mguesdon@orange-concept.com>
		
	* GSWeb.framework/GSWDefaultAdaptorThread.m:
		o fix for autoreleasing runDate inr -run: (from 
		S.J.Chun <chunsj@embian.com>)
	
2004-03-01   Manuel Guesdon <mguesdon@orange-concept.com>
		
	* GSWeb.framework/GSWApplication.m:
		o typo fix in _resetCache
	* GSWeb.framework/GSWMessage.h/.m:
		o added methods for element/component caching
	* GSWeb.framework/GSWHTMLDynamicElement.h/.m:
		o added -computeActionStringWithActionClassAssociation:
			directActionNameAssociation:pathQueryDictionaryAssociation:
			otherPathQueryAssociations:inContext:
	* GSWeb.framework/GSWHyperlink.h/m:
		o added _pathQueryDictionary and _pathQueryDictionary handling
	* GSWeb.framework/GSWConstants.h/.m:
		o added pathQueryDictionary__Key
	* GSWeb.framework/GSWMultiKeyDictionary.m:
		o fixes
		o logs
	* GSWeb.framework/GSWSwitchComponent.m:
		o improved exception description in 
			-_realComponentWithName:inContext:
	* GSWeb.framework/GSWHTMLDynamicElement.h/.m: