@@ -1,5 +1,5 @@
 #ifndef GNUSTEP
-#include <gnsutep/base/GNUstep.h>
+#include <GNUstepBase/GNUstep.h>
 #endif
 
 #include <GSWeb/GSWeb.h>
